--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -34,5 +34,6 @@ jobs:
     needs: get_file_changes
     if: ${{ needs.get_file_changes.outputs.web == 'true' || needs.get_file_changes.outputs.ui == 'true' }}
     runs-on: ubuntu-latest
+    environment: "production:web"
     steps:
-      - run: echo "Deploy Web"
+      - run: echo "Deploy Web to Production"
