--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,19 +10,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@netlify/plugin-nextjs": "^4.8.0",
-    "@scope/ui": "*",
+    "@netlify/plugin-nextjs": "^4.9.1",
+    "@scope/ui": "^0.0.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@scope/eslint-config-custom": "*",
-    "@scope/tsconfig": "*",
-    "@types/node": "^17.0.12",
+    "@scope/eslint-config-custom": "^0.0.0",
+    "@scope/tsconfig": "^0.0.0",
+    "@types/node": "^17.0.45",
     "@types/react": "17.0.37",
     "eslint": "7.32.0",
     "next-transpile-modules": "9.0.0",
-    "typescript": "^4.5.3"
+    "typescript": "^4.7.3"
   }
 }
