--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "format:check": "prettier --check ."
   },
   "devDependencies": {
-    "@scope/eslint-config-custom": "*",
-    "prettier": "^2.6.2",
+    "@scope/eslint-config-custom": "file:packages/eslint-config-custom",
+    "prettier": "^2.7.1",
     "turbo": "^1.2.16"
   },
   "engines": {
