--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@scope/eslint-config-custom": "^0.0.0",
+    "@scope/tsconfig": "^0.0.0",
     "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/react-dom": "^17.0.17",
     "eslint": "^7.32.0",
-    "@scope/eslint-config-custom": "*",
     "react": "^17.0.2",
-    "@scope/tsconfig": "*",
-    "typescript": "^4.5.2"
+    "typescript": "^4.7.3"
   }
 }
