--- a/.github/workflows/push-next.yml
+++ b/.github/workflows/push-next.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Cache .next cache
         uses: actions/cache@v3
         with:
-          path: ${{ github.workspace }}/*/.next/cache
+          path: ${{ github.workspace }}/apps/*/.next/cache
           key: nextjs-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
           restore-keys: |
             nextjs-cache-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}-
