--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,17 +11,17 @@
   },
   "dependencies": {
     "@scope/ui": "^0.0.0",
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@scope/eslint-config-custom": "^0.0.0",
     "@scope/tsconfig": "^0.0.0",
-    "@types/node": "^17.0.45",
-    "@types/react": "17.0.37",
-    "eslint": "7.32.0",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "eslint": "^8.18.0",
     "next-transpile-modules": "9.0.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   }
 }
