--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dev": "turbo run dev --parallel",
     "check-types": "turbo run check-types",
     "lint": "turbo run lint",
-    "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "prettier:check": "prettier --check .",
+    "prettier": "prettier --write ."
   },
   "devDependencies": {
-    "@scope/eslint-config-custom": "file:packages/eslint-config-custom",
+    "@scope/eslint-config-custom": "^0.0.0",
     "prettier": "^2.7.1",
     "turbo": "^1.2.16"
   },
