--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "./index.tsx",
   "types": "./index.tsx",
-  "license": "MIT",
+  "license": "GPL-3.0-only",
   "scripts": {
     "check-types": "tsc --noEmit",
     "lint": "eslint ."
