--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -2,6 +2,7 @@
   "name": "@scope/tsconfig",
   "version": "0.0.0",
   "private": true,
+  "license": "GPL-3.0-only",
   "main": "index.js",
   "files": [
     "base.json",
